# sdd-navigator

./: .gitignore  README.md
.github/workflows/: ci-infra.yml
ansible/: ansible.cfg
ansible/group_vars/: all.yml  dev.yml  prod.yml
ansible/inventories/dev/: hosts.yml
ansible/inventories/prod/: hosts.yml
ansible/playbooks/: deploy.yml  rollback.yml  setup-cluster.yml
ansible/roles/helm-deploy/defaults/: main.yml
ansible/roles/helm-deploy/tasks/: main.yml
ansible/roles/k8s-namespace/tasks/: main.yml
ansible/roles/k8s-prerequisites/tasks/: main.yml
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: main.rs
apps/frontend/: .dockerignore  Dockerfile  next.config.js  package.json
apps/frontend/src/app/: page.tsx
helm/sdd-navigator/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/sdd-navigator/charts/api/: Chart.yaml  values.yaml
helm/sdd-navigator/charts/api/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml
helm/sdd-navigator/charts/frontend/: Chart.yaml  values.yaml
helm/sdd-navigator/charts/frontend/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml
